--- a/template/package.json
+++ b/template/package.json
@@ -12,6 +12,7 @@
     "@subsquid/evm-typegen": "^3.2.2",
     "@subsquid/graphql-server": "^4.3.0",
     "@subsquid/http-client": "^1.3.0",
+    "@subsquid/hydra-common": "^4.2.0-alpha.8",
     "@subsquid/typeorm-migration": "^1.2.1",
     "@subsquid/typeorm-store": "^1.2.2",
     "dotenv": "^16.0.3",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@subsquid/evm-typegen": "^3.2.2",
     "@subsquid/typeorm-codegen": "^1.3.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
   }
